[gd_scene load_steps=5 format=3 uid="uid://gtxcfyx02y2i"]

[ext_resource type="Script" path="res://main.gd" id="1_lgf7p"]
[ext_resource type="Script" path="res://QuitButton.gd" id="2_a24jb"]

[sub_resource type="GDScript" id="GDScript_v0277"]
script/source = "extends Button


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[sub_resource type="GDScript" id="GDScript_cngw8"]
script/source = "extends Button


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[node name="Main" type="Node2D"]
script = ExtResource("1_lgf7p")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ClickButton" type="Button" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.5
offset_top = -15.5
offset_right = 38.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
action_mode = 0
text = "Click Me!"
script = SubResource("GDScript_v0277")

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Score: 0"
horizontal_alignment = 1

[node name="UpgradeContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 205.0
offset_bottom = 20.0
grow_vertical = 2

[node name="UpgradeButton" type="Button" parent="CanvasLayer/UpgradeContainer"]
layout_mode = 2
text = "Upgrade!"

[node name="UpgradeCostLabel" type="Label" parent="CanvasLayer/UpgradeContainer"]
layout_mode = 2
text = "Upgrade Cost: 4"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -294.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="AutoClickerContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="AutoclickerCostLabel" type="Label" parent="CanvasLayer/VBoxContainer/AutoClickerContainer"]
layout_mode = 2
text = "AutoClicker Cost: 20"

[node name="AutoClickerButton" type="Button" parent="CanvasLayer/VBoxContainer/AutoClickerContainer"]
layout_mode = 2
text = "Buy: AutoClicker"
script = SubResource("GDScript_cngw8")

[node name="AutoClickerUpgradeContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="AutoclickerUpgradeCostLabel" type="Label" parent="CanvasLayer/VBoxContainer/AutoClickerUpgradeContainer"]
layout_mode = 2
text = "Upgrade Cost: 40"

[node name="AutoClickerUpgradeButton" type="Button" parent="CanvasLayer/VBoxContainer/AutoClickerUpgradeContainer"]
layout_mode = 2
text = "Upgrade Autoclicker"
script = SubResource("GDScript_cngw8")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 20

[node name="QuitButton" type="Button" parent="CanvasLayer/MarginContainer"]
layout_mode = 2
text = "Quit
"
script = ExtResource("2_a24jb")

[connection signal="mouse_entered" from="CanvasLayer/ClickButton" to="." method="_on_click_button_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/ClickButton" to="." method="_on_click_button_mouse_exited"]
